k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __PROJECT_NAME__
spec:
  replicas: __REPLICAS__
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: __PROJECT_NAME__
  template:
    metadata:
      labels:
        app: __PROJECT_NAME__
    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: __PROJECT_NAME__
          image: __FULL_IMAGE__
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
