k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE__
spec:
  type: ClusterIP
  selector:
    app: __PROJECT_NAME__
  ports:
    - name: http
      port: 80
      targetPort: http
