k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE__
spec:
  ingressClassName: __INGRESS_CLASS__
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __PROJECT_NAME__
                port:
                  number: 80
